--- a/src/app/password-list/password-list.component.html
+++ b/src/app/password-list/password-list.component.html
@@ -18,7 +18,7 @@
           <tbody class="text-gray-600 text-sm font-light">
             <tr *ngFor="let passwordDetail of passwordDetails" class="border-b border-gray-200 hover:bg-gray-100">
               <td class="py-3 px-6 text-left whitespace-nowrap">{{ passwordDetail.username }}</td>
-              <td class="py-3 px-6 text-left">{{ passwordDetail.encryptedPassword }}</td>
+              <td class="py-3 px-6 text-left">{{ passwordDetail.password }}</td>
               <td class="py-3 px-6 text-left">{{ passwordDetail.category }}</td>
               <td class="py-3 px-6 text-left">{{ passwordDetail.app }}</td>
               <td class="py-3 px-6 text-center">
