--- a/src/app/password-list/password-list.component.html
+++ b/src/app/password-list/password-list.component.html
@@ -23,22 +23,26 @@
               <td class="py-3 px-6 text-left">{{ passwordDetail.app }}</td>
               <td class="py-3 px-6 text-center">
                 <div class="flex item-center justify-center">
-                  <button class="w-4 mr-2 transform hover:text-blue-500 hover:scale-110" (click)="editPassword(passwordDetail)">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M12 20h9" />
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M16.59 7.41L20.59 11.41M2 12L7 7m2-2a2 2 0 00-2 2v4h4l4 4" />
+                  <button class="w-4 mr-2 transform hover:text-blue-500 hover:scale-110" title="Edit" (click)="editPassword(passwordDetail)">
+                    <svg class="h-5 w-5 text-green-500" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                      stroke-linecap="round" stroke-linejoin="round">
+                      <path stroke="none" d="M0 0h24v24H0z" />
+                      <path d="M9 7 h-3a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-3" />
+                      <path d="M9 15h3l8.5 -8.5a1.5 1.5 0 0 0 -3 -3l-8.5 8.5v3" />
+                      <line x1="16" y1="5" x2="19" y2="8" />
                     </svg>
                   </button>
-                  <button class="w-4 mr-2 transform hover:text-red-500 hover:scale-110" (click)="deletePassword(passwordDetail)">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M15 12h2m4 0h-2m-8 0H3m8 0H7" />
+                  <button class="w-4 mr-2 transform hover:text-red-500 hover:scale-110" title="Delete"  (click)="deletePassword(passwordDetail)">
+                    <svg class="h-5 w-5 text-red-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
                     </svg>
                   </button>
-                  <button class="w-4 transform hover:text-green-500 hover:scale-110" (click)="decryptPassword(passwordDetail)">
+                  <!-- <button class="w-4 transform hover:text-green-500 hover:scale-110" (click)="decryptPassword(passwordDetail)">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                       <path stroke-linecap="round" stroke-linejoin="round" d="M12 15l9-9m-9 9l-9-9" />
                     </svg>
-                  </button>
+                  </button> -->
                 </div>
               </td>
             </tr>
